# interrogation-room-service

./: .description.md  .pre-commit-config.yaml  Dockerfile  README.md  config_schema.json  example_config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  Dockerfile  dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: dev_cd.yaml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: description.md
.template/: mandatory_files_ignore.txt  static_files_ignore.txt
interrogation_room/: __main__.py  config.py  models.py
interrogation_room/adapters/inbound/: kafka_ucs_consumer.py
interrogation_room/api/: main.py
interrogation_room/core/: exceptions.py  upload_handler.py
irs/: __init__.py  __main__.py  config.py  main.py
irs/adapters/: __init__.py
irs/adapters/http/: __init__.py  api_calls.py  exception_translation.py  exceptions.py
irs/adapters/inbound/: __init__.py  akafka.py  event_sub.py  kafka_ucs_consumer.py  s3.py  (+1 more)
irs/core/: exceptions.py  interrogator.py  upload_handler.py
lock/: requirements-dev.txt  requirements.txt
scripts/: openapi_from_app.py
src/irs/: cli.py  config.py  container.py  inject.py  main.py
tests/: test_bucket_cleaning.py  test_cli.py  test_event_handling.py
tests/fixtures/: config.py  file_fixtures.py  joint.py  kafka_fixtures.py  keypair_fixtures.py  test_config.yaml  test_files.py  utils.py
tests/integration/: test_api.py  test_event_handling.py
tests/unit/: test_messages.py  test_upload_handler.py
(+33 files in other folders)
